Adding font awesome as a gem

--- a/themes/benamer/sass/partials/global/_base.scss
+++ b/themes/benamer/sass/partials/global/_base.scss
@@ -13,6 +13,8 @@
 @import 'singularitygs';
 @import 'toolkit';
 @import 'toolkit/kickstart';
+@import "font-awesome-compass";
+@import "font-awesome";
 
 ////////////////////////
 // Private Imports
