--- a/themes/benamer/css/print.css
+++ b/themes/benamer/css/print.css
@@ -1,23 +1,16 @@
 /*
-Error: File to import not found or unreadable: toolkit/kickstart.
+Error: File to import not found or unreadable: font-awesome-compass.
        Load paths:
          Compass::SpriteImporter
          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass
-         /usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/compass-blend-modes-0.0.2/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/compass-h5bp-1.0.0/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/compass-normalize-1.4.3/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/susy-2.2.5/sass
-         /usr/local/lib/ruby/gems/2.2.0/gems/sassy-maps-0.4.0/sass
-         /usr/local/lib/ruby/gems/2.2.0/gems/breakpoint-2.5.0/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/singularitygs-1.1.2/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/sassy-strings-1.0.0/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/color-schemer-0.2.8/stylesheets
-         /usr/local/lib/ruby/gems/2.2.0/gems/toolkit-1.2.2/stylesheets
-        on line 15 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-core-1.0.3/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sassy-maps-0.4.0/sass
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/breakpoint-2.5.0/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/singularitygs-1.6.2/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/toolkit-2.9.0/stylesheets
+        on line 16 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss
         from line 11 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/print.scss
 
-10: ////////////////////////
 11: @import 'partials/global/base';
 12: 
 13: 
@@ -26,66 +19,64 @@ Error: File to import not found or unreadable: toolkit/kickstart.
 16: ////////////////////////
 
 Backtrace:
-/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss:15
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss:16
 /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/print.scss:11
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/import_node.rb:66:in `rescue in import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/import_node.rb:45:in `import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/import_node.rb:28:in `imported_file'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/import_node.rb:37:in `css_import?'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `map'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `block in with_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `with_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:20:in `render'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:268:in `render'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/sass_compiler.rb:40:in `compile!'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/commands/update_project.rb:49:in `perform'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/bin/compass:30:in `block in <top (required)>'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/bin/compass:44:in `call'
-/usr/local/lib/ruby/gems/2.2.0/gems/compass-1.0.3/bin/compass:44:in `<top (required)>'
-/usr/local/bin/compass:23:in `load'
-/usr/local/bin/compass:23:in `<main>'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:45:in `import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `block in with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `map'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:88:in `block in with_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:88:in `with_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `block in with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `map'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/root_node.rb:20:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:278:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:209:in `each'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:254:in `call'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: toolkit/kickstart.\A        Load paths:\A          Compass::SpriteImporter\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass\A          /usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/compass-blend-modes-0.0.2/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/compass-h5bp-1.0.0/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/compass-normalize-1.4.3/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/susy-2.2.5/sass\A          /usr/local/lib/ruby/gems/2.2.0/gems/sassy-maps-0.4.0/sass\A          /usr/local/lib/ruby/gems/2.2.0/gems/breakpoint-2.5.0/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/singularitygs-1.1.2/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/sassy-strings-1.0.0/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/color-schemer-0.2.8/stylesheets\A          /usr/local/lib/ruby/gems/2.2.0/gems/toolkit-1.2.2/stylesheets\A         on line 15 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss\A         from line 11 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/print.scss\A \A 10: ////////////////////////\A 11: @import 'partials/global/base';\A 12: \A 13: \A 14: ////////////////////////\A 15: // Custom Code\A 16: ////////////////////////"; }
+  content: "Error: File to import not found or unreadable: font-awesome-compass.\A        Load paths:\A          Compass::SpriteImporter\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-core-1.0.3/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sassy-maps-0.4.0/sass\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/breakpoint-2.5.0/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/singularitygs-1.6.2/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/toolkit-2.9.0/stylesheets\A         on line 16 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss\A         from line 11 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/print.scss\A \A 11: @import 'partials/global/base';\A 12: \A 13: \A 14: ////////////////////////\A 15: // Custom Code\A 16: ////////////////////////"; }
