--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -1,248 +1,87 @@
-html {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+/*
+Error: File to import not found or unreadable: font-awesome-compass.
+       Load paths:
+         Compass::SpriteImporter
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-core-1.0.3/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sassy-maps-0.4.0/sass
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/breakpoint-2.5.0/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/singularitygs-1.6.2/stylesheets
+         /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/toolkit-2.9.0/stylesheets
+        on line 16 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss
+        from line 10 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/style.scss
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
+11: 
+12: ////////////////////////
+13: // Import Style Guide
+14: ////////////////////////
+15: @import 'partials/styleguide/style-guide';
+16: 
+17: ////////////////////////
+18: // Import Layout
+19: ////////////////////////
+20: @import 'partials/layout/layout';
+21: 
 
-embed,
-img,
-object,
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-.aurora-sample-layout:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-main .aurora-section-first {
-  width: 100%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-  height: 180px;
-  clear: both;
-}
-@media (min-width: 600px) {
-  main .aurora-section-first {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
-    height: 180px;
-  }
-}
-@media (min-width: 1024px) {
-  main .aurora-section-first {
-    width: 100%;
-    clear: right;
-    float: right;
-    margin-right: 0;
-    height: 360px;
-    clear: both;
-  }
-}
-
-main .aurora-section-second {
-  width: 63.63636%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0;
-  clear: none;
-  clear: both;
-}
-@media (min-width: 600px) {
-  main .aurora-section-second {
-    width: 65.21739%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 0;
-    clear: none;
-    clear: both;
-  }
-}
-@media (min-width: 1024px) {
-  main .aurora-section-second {
-    width: 65.95745%;
-    clear: right;
-    float: left;
-    margin-left: 0;
-    margin-right: 2.12766%;
-    clear: both;
-  }
-}
-
-main .aurora-section-third {
-  width: 27.27273%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-}
-@media (min-width: 600px) {
-  main .aurora-section-third {
-    width: 30.43478%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-  }
-}
-@media (min-width: 1024px) {
-  main .aurora-section-third {
-    width: 31.91489%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-  }
-}
-
-.aurora-section-first {
-  background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.25)), url("../img/benamercom-header.jpg");
-  text-align: right;
-  color: white;
-}
-
-div .pane-blockify-blockify-site-slogan {
-  margin-top: 18px;
-}
-
-h1#site-title {
-  font-family: 'Lobster Two';
-  font-weight: 700;
-  text-align: right;
-  margin-top: -.125em;
-  margin-right: 1em;
-  font-size: 2em;
-}
-@media (min-width: 600px) {
-  h1#site-title {
-    text-align: center;
-    font-size: 3em;
-  }
-}
-@media (min-width: 1024px) {
-  h1#site-title {
-    text-align: center;
-    font-size: 3em;
-  }
-}
-
-ul li.first.leaf {
-  float: left;
-  border-right: 1px solid #e2e2e2;
-  font-size: .35em;
-}
-@media (min-width: 600px) {
-  ul li.first.leaf {
-    font-size: 1em;
-  }
-}
-@media (min-width: 1024px) {
-  ul li.first.leaf {
-    font-size: 1em;
-  }
-}
-
-ul li.leaf {
-  float: left;
-  border-right: 1px solid #e2e2e2;
-  font-size: .35em;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-@media (min-width: 600px) {
-  ul li.leaf {
-    font-size: 1em;
-  }
-}
-@media (min-width: 1024px) {
-  ul li.leaf {
-    font-size: 1em;
-  }
-}
-
-ul li.last.leaf {
-  float: left;
-  border-right: 0px;
-  font-size: .35em;
-}
-@media (min-width: 600px) {
-  ul li.last.leaf {
-    font-size: 1em;
-  }
-}
-@media (min-width: 1024px) {
-  ul li.last.leaf {
-    font-size: 1em;
-  }
-}
-
-.panel-pane.pane-block.pane-system-main-menu {
-  margin-top: -2em;
-  margin-left: -2em;
-}
-@media (min-width: 600px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    margin-top: -3.25em;
-    margin-left: -3em;
-    font-size: 1.15em;
-  }
-}
-@media (min-width: 1024px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
-    font-size: 1.15em;
-    margin-top: -5.25em;
-  }
-}
-
-ul.menu {
-  border: none;
-  list-style: none;
-  text-align: left;
-  list-style-type: none;
-}
-
-ul li.first.leaf a:link, a:visited {
-  color: darkgray;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-ul li.leaf a:link, a:visited {
-  color: darkgray;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-ul li.last.leaf a:link, a:visited {
-  color: darkgray;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-family: 'Open Sans';
-  font-weight: 800;
-}
+Backtrace:
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss:16
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/style.scss:10
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:45:in `import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `block in with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `map'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:88:in `block in with_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:88:in `with_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `block in with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:115:in `with_frame'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/stack.rb:79:in `with_base'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `map'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/tree/root_node.rb:20:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/engine.rb:278:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:209:in `each'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:254:in `call'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
+/Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sass-3.4.15/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: font-awesome-compass.\A        Load paths:\A          Compass::SpriteImporter\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/compass-core-1.0.3/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/sassy-maps-0.4.0/sass\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/breakpoint-2.5.0/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/singularitygs-1.6.2/stylesheets\A          /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/.vendor/bundle/ruby/2.2.0/gems/toolkit-2.9.0/stylesheets\A         on line 16 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/partials/global/_base.scss\A         from line 10 of /Users/abenamer/psh-stg/benamercom/repository/themes/benamer/sass/style.scss\A \A 11: \A 12: ////////////////////////\A 13: // Import Style Guide\A 14: ////////////////////////\A 15: @import 'partials/styleguide/style-guide';\A 16: \A 17: ////////////////////////\A 18: // Import Layout\A 19: ////////////////////////\A 20: @import 'partials/layout/layout';\A 21: "; }
