--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -37,6 +37,11 @@ h1#site-title {
   }
 }
 
+h1#site-title a:link, a:visited {
+  text-decoration: none;
+  color: white;
+}
+
 ul li.first.leaf {
   float: left;
   border-right: 1px solid #e2e2e2;
@@ -94,7 +99,7 @@ ul li.last.leaf {
     font-size: 1.15em;
     margin-top: -5.25em;
   }
-}   
+}
 
 ul.menu {
   border: none;
