--- a/themes/benamer/sass/partials/global/_base.scss
+++ b/themes/benamer/sass/partials/global/_base.scss
@@ -13,7 +13,7 @@
 @import 'singularitygs';
 @import 'toolkit';
 @import 'toolkit/kickstart';
-@import "font-awesome-sprockets";
+@import "font-awesome-compass";
 @import "font-awesome";
 
 ////////////////////////
