--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2597,3 +2597,27 @@ h2 {
   font-family: 'Open Sans';
   font-weight: 800;
 }
+
+.panel-pane.pane-block.pane-block-2 {
+  color: darkgrey;
+  margin-top: -5em;
+  margin-right: 1em;
+}
+@media (min-width: 600px) {
+  .panel-pane.pane-block.pane-block-2 {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+  }
+}
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-block-2 {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+  }
+}
