--- a/themes/benamer/sass/partials/styleguide/_style-guide.scss
+++ b/themes/benamer/sass/partials/styleguide/_style-guide.scss
@@ -14,5 +14,5 @@
 //  If you'd like a hard reset, uncomment `compass/reset`.
 //  If you'd prefer a soft reset, uncomment `normalize`
 //////////////////////////////
-// @import 'compass/reset';
-// @import 'normalize';
+//@import 'compass/reset';
+@import 'normalize';
