--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -42,6 +42,7 @@ main .aurora-section-first {
 }
 
 main .aurora-section-second {
+  @include add-gutter-style('split');
   @include grid-span(2, 1);
   clear: both;
   @include breakpoint($tablet) {
