--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -18,7 +18,7 @@ div .pane-blockify-blockify-site-slogan {
   margin-top:18px;
 }
 
-h1#site-title {
+h1#site-title a:link, a:visited{
   // mobile first
   font-family: 'Lobster Two';
   font-weight: 700;
@@ -26,6 +26,8 @@ h1#site-title {
   margin-top: -.125em;
   margin-right: 1em;
   font-size: 2em;
+  text-decoration: none;
+  color: white;
 
   @include breakpoint($tablet) {
     text-align: center;
@@ -34,13 +36,10 @@ h1#site-title {
   @include breakpoint($desktop) {
     text-align: center;
     font-size: 3em;
+    letter-spacing: .125em;
   }
 }
 
-h1#site-title a:link, a:visited {
-  text-decoration: none;
-  color: white;
-}
 
 ul li.first.leaf {
   float: left;
