--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -32,11 +32,15 @@ h1#site-title a:link, a:visited{
   @include breakpoint($tablet) {
     text-align: center;
     font-size: 3em;
+    text-decoration: none;
+    color: white;
   }
   @include breakpoint($desktop) {
     text-align: center;
     font-size: 3em;
     letter-spacing: .125em;
+    text-decoration: none;
+    color: white;
   }
 }
 
