--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -18,7 +18,7 @@ div .pane-blockify-blockify-site-slogan {
   margin-top:18px;
 }
 
-h1#site-title a:link, a:visited{
+h1#site-title a{
   // mobile first
   font-family: 'Lobster Two';
   font-weight: 700;
@@ -31,13 +31,13 @@ h1#site-title a:link, a:visited{
 
   @include breakpoint($tablet) {
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     text-decoration: none;
     color: white;
   }
   @include breakpoint($desktop) {
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     letter-spacing: .125em;
     text-decoration: none;
     color: white;
