--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -77,9 +77,8 @@ main .aurora-section-third {
   margin-left: -2em;
 
   @include breakpoint($tablet) {
-    @include grid-span(4, 1);
-    margin-top: -4em;
-    margin-left: -.5em;
+    @include grid-span(3, 1);
+    margin-left: -2em;
 
   }
 
@@ -93,7 +92,7 @@ main .aurora-section-third {
 // front page title
 .panel-pane.pane-block.pane-block-1 {
   @include breakpoint($tablet) {
-    @include grid-span(1, 5);
+    @include grid-span(1, 4);
     text-align: center;
     margin-top: -1.5em;
   }
@@ -111,7 +110,8 @@ main .aurora-section-third {
   margin-right: 1em;
 
   @include breakpoint($tablet) {
-    @include grid-span(1, 6);
+    @include grid-span(1, 5);
+    margin-top: -.7em;
 
   }
 
