--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -79,7 +79,7 @@ main .aurora-section-third {
   @include breakpoint($tablet) {
     @include grid-span(3, 1);
     margin-left: -2em;
-
+    margin-top: 0em;
   }
 
   @include breakpoint($desktop) {
