--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -57,7 +57,7 @@ ul li.first.leaf {
 ul li.leaf {
   float: left;
   border-right: 1px solid #e2e2e2;
-  font-size: 1em;
+  font-size: .8em;
   padding-right: 15px;
   padding-left: 15px;
 
@@ -72,7 +72,7 @@ ul li.leaf {
 ul li.last.leaf {
   float: left;
   border-right: 0px;
-  font-size: 1em;
+  font-size: .8em;
   @include breakpoint($tablet) {
     font-size: .8em;
   }
