--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -15,7 +15,7 @@ $desktop: 1024px;
 @include add-grid(6 at $tablet); // tablet portrait
 @include add-grid(12 at $desktop); // desktop
 
-@include add-gutter(1/3);
+@include add-gutter(.125);
 @include add-gutter(1/3 at $tablet);
 @include add-gutter(1/3 at $desktop);
 
@@ -26,7 +26,7 @@ $desktop: 1024px;
 main .aurora-section-first {
   height: 180px;
   clear: both;
-
+  margin-top: -1.5em;
   @include breakpoint($tablet) {
     @include grid-span(6, 1);
     clear: both;
@@ -103,7 +103,9 @@ main .aurora-section-third {
 // search icon
 .panel-pane.pane-block.pane-block-2 {
   // mobile first
-
+  text-align: right;
+  margin-right: 1em;
+  margin-top: -3.25em;
   @include breakpoint($tablet) {
     @include grid-span(1, 5);
     margin-top: -3.25em;
@@ -120,7 +122,9 @@ main .aurora-section-third {
 
 .panel-pane.pane-block.pane-menu-menu-main-menu-tablet {
   @include grid-span(1, 1);
-
+  margin-top: -4em;
+  margin-left: -3em;
+  text-align: left;
   @include breakpoint($tablet) {
     @include grid-span(4, 1);
     clear: both;
