--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -60,6 +60,11 @@ ul li.leaf {
   font-size: .8em;
   padding-right: 15px;
   padding-left: 15px;
+  @include breakpoint($tablet) {
+    font-size: .8em;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 
   @include breakpoint($tablet) {
     font-size: .8em;
@@ -111,3 +116,6 @@ h2{
   font-family: 'Open Sans'; font-weight: 800;
 }
 
+.panel-pane.pane-block.pane-block-2 {
+  color:darkgray;
+}
