--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -31,12 +31,15 @@ main .aurora-section-first {
     @include grid-span(6, 1);
     clear: both;
     height: 180px;
+    margin-top: inherit;
+
   }
 
   @include breakpoint($desktop) {
     @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
     clear: both;
+    margin-top: inherit;
   }
 }
 
