--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -115,6 +115,10 @@ h2{
   font-family: 'Open Sans'; font-weight: 800;
 }
 
-.panel-pane.pane-block.pane-block-2 {
-  color:darkgray;
+.panel-pane.pane-block.pane-block-2 a {
+  color: darkgrey;
+}
+
+:hover {
+  color:white;
 }
