--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2724,16 +2724,74 @@ body.page-node main .aurora-section-second {
 }
 @media (min-width: 1024px) {
   body.page-node main .aurora-section-second {
+    height: 360px;
+    clear: both;
+    margin-top: inherit;
+  }
+}
+
+body.page-node main .aurora-section-third {
+  display: none;
+}
+
+body.page-search .aurora-sample-layout:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+body.page-search main .aurora-section-first {
+  height: 180px;
+  clear: both;
+  margin-top: -1.5em;
+}
+@media (min-width: 600px) {
+  body.page-search main .aurora-section-first {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: both;
+    height: 180px;
+    margin-top: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  body.page-search main .aurora-section-first {
     width: 97.91667%;
     clear: right;
     float: right;
     margin-left: 0;
     margin-right: 1.04167%;
+    height: 360px;
     clear: both;
+    margin-top: inherit;
   }
 }
 
-body.page-node main .aurora-section-third {
+body.page-search main .aurora-section-second {
+  clear: both;
+}
+@media (min-width: 600px) {
+  body.page-search main .aurora-section-second {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: both;
+  }
+}
+@media (min-width: 1024px) {
+  body.page-search main .aurora-section-second {
+    height: 360px;
+    clear: both;
+    margin-top: inherit;
+  }
+}
+
+body.page-search main .aurora-section-third {
   display: none;
 }
 
@@ -2977,4 +3035,14 @@ h2 {
 
 .panel-pane.pane-block.pane-system-main-menu a:hover {
   color: white;
+}
+
+div.form-type-searchfield input[type="search"] {
+  width: 60em;
+  height: 4em;
+}
+
+.form-item.form-type-searchfield.form-item-search-block-form {
+  margin-left: auto;
+  margin-right: auto;
 }
