--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -133,3 +133,13 @@ h2{
 .panel-pane.pane-block.pane-system-main-menu a:hover {
   color:white;
 }
+
+div.form-type-searchfield input[type="search"] {
+  width: 60em;
+  height: 4em;
+}
+
+.form-item.form-type-searchfield.form-item-search-block-form {
+  margin-left: auto;
+  margin-right: auto;
+}
